# Azure-Container-Apps-as-Proxy-for-AWS-managed-MCP-Server-via-FastAPI

./: .env.template  .gitignore  Dockerfile  README.md  azure.yaml  load-env.ps1  main.py  pyproject.toml
infra/: abbreviations.json  main.bicep  main.parameters.json  resources.bicep
